# vroom

./: .editorconfig  .gitignore  .travis.yml  MANIFEST.in  README.md  VERSION.txt  pyproject.toml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yml  discord.yml
examples/: basics.vroom  blocks.vroom  buffer.vroom  continuations.vroom  controls.vroom  directives.vroom  escaping.vroom  macros.vroom  messages.vroom  mode.vroom  range.vroom  system.vroom
examples/setup_hooks/: .setup.vroomhook  first_hook.vroom
examples/setup_hooks/a/: .setup.vroomhook  second_hook.vroom
examples/setup_hooks/a/b/: .setup.vroomhook  third_hook.vroom
scripts/: respond.vroomfaker  shell.vroomfaker  vroom
vroom/: __init__.py  __main__.py  actions.py  args.py  buffer.py  color.py  command.py  controls.py  environment.py  messages.py  neovim_mod.py  output.py  result.py  runner.py  shell.py  test.py  vim.py
